<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, CalculatorActivity!</string>
    <string name="app_name">Calculator</string>
    
    
    <string name="btn1Text">1</string>
    <string name="btn2Text">2</string>
    <string name="btn3Text">3</string>
    <string name="btn4Text">4</string>
    <string name="btn5Text">5</string>
    <string name="btn6Text">6</string>
    <string name="btn7Text">7</string>
    <string name="btn8Text">8</string>
    <string name="btn9Text">9</string>
    <string name="btn0Text">0</string>
    <string name="btnDotText">.</string>       
    <string name="btnEqualText">=</string>
    <string name="btnPlusText">+</string>
    <string name="btnMinusText">-</string>
    <string name="btnMultiplyText">*</string>
    <string name="btnDivisionText">/</string>
    
    <string name="btnMRText">MR</string>
    <string name="btnMplusText">M+</string>
    <string name="btnMminusText">MC</string>
    <string name="btnDelText">Del</string>
    
    <string name="btnCancelText">C</string>
    <string name="btnClearText">CE</string>
    <string name="btnHistoryText">Hist</string>
    <string name="btnRootText">R</string>
    <string name="btnOffText">Off</string>
    <string name="btnHistBackText">Back</string>
    
    
    
    
    
    

</resources>